[package]
name = "void-architect"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "void-architect"
path = "src/main.rs"

[dependencies]
bevy = "0.14"
bevy_rapier2d = { version = "0.27", features = ["simd-stable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
bitflags = "2"
noise = "0.9"
dirs = "5"

[dev-dependencies]
bevy = { version = "0.14" }

# Optimasi build: paket dependensi di-release level, game code sendiri opt-level=1
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
